<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculator_v2">

    <EditText
        android:id="@+id/editbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:textSize="50dp"
        android:hint="k for kalkulator"
        android:inputType=""/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editbox"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:id="@+id/linearid">

            <Button
                android:id="@+id/button1"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/_1"
                android:textSize="50dp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:text="@string/_2"
                android:textSize="50dp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/_3"
                android:textSize="50dp" />

            <Button
                android:id="@+id/buttonadd"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/_add"
                android:textSize="50dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:id="@+id/linearid2"
            android:layout_below="@id/linearid">

            <Button
                android:id="@+id/button4"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/_4"
                android:textSize="50dp" />

            <Button
                android:id="@+id/button5"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/_5"
                android:textSize="50dp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/_6"
                android:textSize="50dp" />

            <Button
                android:id="@+id/buttonsub"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/_sub"
                android:textSize="50dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:id="@+id/linearid3"
            android:layout_below="@id/linearid2">

            <Button
                android:id="@+id/button7"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/_7"
                android:textSize="50dp" />

            <Button
                android:id="@+id/button8"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/_8"
                android:textSize="50dp" />

            <Button
                android:id="@+id/button9"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/_9"
                android:textSize="50dp" />

            <Button
                android:id="@+id/buttonmulti"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/_multi"
                android:textSize="50dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:id="@+id/linearid4"
            android:layout_below="@id/linearid3">

            <Button
                android:id="@+id/buttondot"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/_dot"
                android:textSize="50dp" />

            <Button
                android:id="@+id/button0"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/_0"
                android:textSize="50dp" />

            <Button
                android:id="@+id/buttonc"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/_c"
                android:textSize="50dp" />

            <Button
                android:id="@+id/buttondiv"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/_div"
                android:textSize="50dp" />

        </LinearLayout>

        <Button
            android:id="@+id/buttoneql"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_below="@id/linearid4"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/_eql"
            android:textSize="50dp" />

    </RelativeLayout>

</RelativeLayout>