<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Form_v2">

    <LinearLayout
        android:id="@+id/linearid1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30sp">

        <TextView
            android:id="@+id/textname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/name"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_your_name"
            android:inputType="textPersonName"
            android:layout_marginLeft="10sp"/>


    </LinearLayout>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_below="@id/linearid1"
        android:layout_marginTop="50sp"
        android:layout_centerHorizontal="true"
        android:id="@+id/rdg">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/male"
            android:text="@string/male" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/female"
            android:text="@string/female" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:layout_marginTop="15sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/rdg"
        android:id="@+id/linearid2"
        >

        <CheckBox
            android:id="@+id/chksports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sports" />

        <CheckBox
            android:id="@+id/chkarts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arts" />

        <CheckBox
            android:id="@+id/chksocail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/social_work" />


    </LinearLayout>

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearid2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        android:textOff="Submit"
        android:textOn="Reset" />

    <Button
        android:id="@+id/fv2back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toggleButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200sp"
        android:text="back" />

</RelativeLayout>